Ensure the integration and special attack for enemies. Created the special attack for wolf.